tests/snapshots/runtime_error_fixtures/indirect_call_not_callable.snap
---
source: tests/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/indirect_call_not_callable.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
error[E1001]: Not A Function

Cannot call non-function value (got Int).

  <unknown>:0:1
  |

Stack trace:
  at main
  at <main>
== jit ==
status: 1
stdout:
<empty>
stderr:
• 1 error • examples/runtime_errors/indirect_call_not_callable.flx
error[E1001]: Not A Function

Cannot call non-function value (got Int).

  examples/runtime_errors/indirect_call_not_callable.flx:3:19
  |
3 |     let ignored = f(2)
  |                   ^^^^
